@@ -29,6 +29,7 @@ import com.badlogic.gdx.utils.Array;
 
 import java.awt.GraphicsDevice;
 import java.awt.GraphicsEnvironment;
+import java.util.Locale;
 
 public class LwjglApplicationConfiguration {
 	/** If true, OpenAL will not be used. This means {@link Application#getAudio()} returns null and the gdx-openal.jar and OpenAL
@@ -97,10 +98,14 @@ public class LwjglApplicationConfiguration {
 	/** Allows software OpenGL rendering if hardware acceleration was not available.
 	 * @see LwjglGraphics#isSoftwareMode() */
 	public boolean allowSoftwareMode = false;
-	/** Preferences directory on the desktop. Default is ".prefs/". */
-	public String preferencesDirectory = ".prefs/";
+	/** Preferences directory on the desktop. Default depends on operating system. */
+	public String preferencesDirectory = getDefaultPreferencesDirectory();
+	/** Another preferences directory. Exists for legacy reasons. */
+	public String preferencesBackupDirectory = ".prefs/";
 	/** Preferences file type on the desktop. Default is FileType.External */
-	public Files.FileType preferencesFileType = FileType.External;
+	public Files.FileType preferencesFileType = getDefaultPreferencesFileType();
+	/** Another preferences file type. Exists for legacy reasons. */
+	public Files.FileType preferencesBackupFileType = Files.FileType.External;
 	/** Callback used when trying to create a display, can handle failures, default value is null (disabled) */
 	public LwjglGraphics.SetDisplayModeCallback setDisplayModeCallback;
 	/** enable HDPI mode on Mac OS X **/
@@ -180,4 +185,65 @@ public class LwjglApplicationConfiguration {
 
 		return modes.toArray(new DisplayMode[modes.size()]);
 	}
+
+	private enum OperatingSystem {
+		WINDOWS, MAC, LINUX, UNKNOWN
+	}
+
+	/**
+	 * Returns where preferences are stored by default.
+	 * Typically AppData/Roaming on Windows, Library/Preferences on macOS and .config on Linux.
+	 * @return The default preferences directory.
+	 */
+	public String getDefaultPreferencesDirectory() {
+		switch (getOS()) {
+
+			case WINDOWS:
+				String appdata = System.getenv("APPDATA");
+				String windir = System.getenv("WINDIR");
+				return (appdata != null) ? appdata // 2000/XP/Vista/7/8/10/11
+					: (windir != null) ? windir + "/Application Data" // 95/98/Me
+					: preferencesBackupDirectory; // Default to backup directory (probably ~/.prefs/) if it's broken
+
+			case MAC:
+				return "Library/Preferences";
+
+			case LINUX:
+				String configHome = System.getenv("XDG_CONFIG_HOME");
+				if (configHome != null) {
+					//TODO: Someone with regex skills should make this work with all environment variables
+					if (configHome.contains("$HOME")) configHome = configHome.replace("$HOME", System.getenv("HOME"));
+					else if (configHome.contains("$")) configHome = null;
+				}
+				return (configHome != null) ? configHome : ".config";
+
+			default:
+				return preferencesBackupDirectory;
+
+		}
+	}
+
+	/**
+	 * @return The default FileType for the operating system - External or Absolute.
+	 */
+	public Files.FileType getDefaultPreferencesFileType() {
+		OperatingSystem os = getOS();
+		switch (os) {
+			case WINDOWS:
+				return (System.getenv("APPDATA") != null || System.getenv("WINDIR") != null)
+					? Files.FileType.Absolute : preferencesBackupFileType;
+			case MAC: return Files.FileType.External;
+			case LINUX: return (System.getenv("XDG_CONFIG_HOME") != null) ? Files.FileType.Absolute : Files.FileType.External;
+		}
+		return Files.FileType.External;
+	}
+
+	private OperatingSystem getOS() {
+		String osName = System.getProperty("os.name").toLowerCase(Locale.US);
+		if (osName.contains("windows")) return OperatingSystem.WINDOWS;
+		else if (osName.contains("mac")) return OperatingSystem.MAC;
+		else if (osName.contains("linux")) return OperatingSystem.LINUX;
+		else return OperatingSystem.UNKNOWN;
+	}
+
 }
