@@ -329,7 +329,8 @@ public class Lwjgl3Application implements Lwjgl3ApplicationBase {
 			return preferences.get(name);
 		} else {
 			Preferences prefs = new Lwjgl3Preferences(
-					new Lwjgl3FileHandle(new File(config.preferencesDirectory, name), config.preferencesFileType));
+					new Lwjgl3FileHandle(new File(config.preferencesDirectory, name), config.preferencesFileType),
+					new Lwjgl3FileHandle(new File(config.preferencesBackupDirectory, name), config.preferencesBackupFileType));
 			preferences.put(name, prefs);
 			return prefs;
 		}
