@@ -18,6 +18,7 @@ package com.badlogic.gdx.backends.lwjgl3;
 
 import java.io.PrintStream;
 import java.nio.IntBuffer;
+import java.util.Locale;
 
 import org.lwjgl.BufferUtils;
 import org.lwjgl.PointerBuffer;
@@ -36,6 +37,7 @@ import com.badlogic.gdx.backends.lwjgl3.Lwjgl3Graphics.Lwjgl3Monitor;
 import com.badlogic.gdx.graphics.GL20;
 import com.badlogic.gdx.graphics.glutils.HdpiMode;
 import com.badlogic.gdx.graphics.glutils.HdpiUtils;
+import com.badlogic.gdx.math.MathUtils;
 
 public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 	boolean disableAudio = false;
@@ -59,8 +61,10 @@ public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 	int idleFPS = 60;
 	int foregroundFPS = 0;
 
-	String preferencesDirectory = ".prefs/";
-	Files.FileType preferencesFileType = FileType.External;
+	String preferencesDirectory = getDefaultPreferencesDirectory();
+	Files.FileType preferencesFileType = getDefaultPreferencesFileType();
+	String preferencesBackupDirectory = ".prefs/";
+	Files.FileType preferencesBackupFileType = FileType.External;
 
 	HdpiMode hdpiMode = HdpiMode.Logical;
 
@@ -94,6 +98,8 @@ public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 		foregroundFPS = config.foregroundFPS;
 		preferencesDirectory = config.preferencesDirectory;
 		preferencesFileType = config.preferencesFileType;
+		preferencesBackupDirectory = config.preferencesBackupDirectory;
+		preferencesBackupFileType = config.preferencesBackupFileType;
 		hdpiMode = config.hdpiMode;
 		debug = config.debug;
 		debugStream = config.debugStream;
@@ -225,6 +231,14 @@ public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 		this.preferencesFileType = preferencesFileType;
 	}
 
+	public void setPreferencesConfig(String preferencesDirectory, Files.FileType preferencesFileType,
+																	 String preferencesBackupDirectory, Files.FileType preferencesBackupFileType) {
+		this.preferencesDirectory = preferencesDirectory;
+		this.preferencesFileType = preferencesFileType;
+		this.preferencesBackupDirectory = preferencesBackupDirectory;
+		this.preferencesBackupFileType = preferencesBackupFileType;
+	}
+
 	/**
 	 * Defines how HDPI monitors are handled. Operating systems may have a
 	 * per-monitor HDPI scale setting. The operating system may report window
@@ -337,4 +351,65 @@ public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 		String name = GLFW.glfwGetMonitorName(glfwMonitor);
 		return new Lwjgl3Monitor(glfwMonitor, virtualX, virtualY, name);
 	}
+
+	private enum OperatingSystem {
+		WINDOWS, MAC, LINUX, UNKNOWN
+	}
+
+	/**
+	 * Returns where preferences are stored by default.
+	 * Typically AppData/Roaming on Windows, Library/Preferences on macOS and .config on Linux.
+	 * @return The default preferences directory.
+	 */
+	public String getDefaultPreferencesDirectory() {
+		switch (getOS()) {
+
+			case WINDOWS:
+				String appdata = System.getenv("APPDATA");
+				String windir = System.getenv("WINDIR");
+				return (appdata != null) ? appdata // 2000/XP/Vista/7/8/10/11
+					: (windir != null) ? windir + "/Application Data" // 95/98/Me
+					: preferencesBackupDirectory; // Default to backup directory (probably ~/.prefs/) if it's broken
+
+			case MAC:
+				return "Library/Preferences";
+
+			case LINUX:
+				String configHome = System.getenv("XDG_CONFIG_HOME");
+				if (configHome != null) {
+					//TODO: Someone with regex skills should make this work with all environment variables
+					if (configHome.contains("$HOME")) configHome = configHome.replace("$HOME", System.getenv("HOME"));
+					else if (configHome.contains("$")) configHome = null;
+				}
+				return (configHome != null) ? configHome : ".config";
+
+			default:
+				return preferencesBackupDirectory;
+
+		}
+	}
+
+	/**
+	 * @return The default FileType for the operating system - External or Absolute.
+	 */
+	public Files.FileType getDefaultPreferencesFileType() {
+		OperatingSystem os = getOS();
+		switch (os) {
+			case WINDOWS:
+				return (System.getenv("APPDATA") != null || System.getenv("WINDIR") != null)
+					? Files.FileType.Absolute : preferencesBackupFileType;
+			case MAC: return Files.FileType.External;
+			case LINUX: return (System.getenv("XDG_CONFIG_HOME") != null) ? Files.FileType.Absolute : Files.FileType.External;
+		}
+		return Files.FileType.External;
+	}
+
+	private OperatingSystem getOS() {
+		String osName = System.getProperty("os.name").toLowerCase(Locale.US);
+		if (osName.contains("windows")) return OperatingSystem.WINDOWS;
+		else if (osName.contains("mac")) return OperatingSystem.MAC;
+		else if (osName.contains("linux")) return OperatingSystem.LINUX;
+		else return OperatingSystem.UNKNOWN;
+	}
+
 }
